[package]
name = "winpe"
version = "0.0.1"
authors = ["arcnmx"]

description = "Windows PE file parsing and loading"
keywords = ["pe", "exe", "dll"]

documentation = "http://arcnmx.github.io/winpe-rs/winpe"
repository = "https://github.com/arcnmx/winpe-rs"
readme = "README.md"
license = "MIT"

[dependencies]
winpe-image = { version = "=0.0.1", path = "image" }
byteorder-pod = "^0.1.0"
pod = "^0.5.0"
result = "^0.0.1"
